src/components/TimeChart/TimeChart.module.css
.chart {
	display: grid;

	[data-areas-layer],
	[data-lines-layer],
	[data-points-layer],
	[data-labels-layer] {
		clip-path: var(--clip-path-url);
	}

	[data-interaction-layer] {
		cursor: crosshair;

		.selection-overlay {
			fill: rgb(from var(--text-tertiary) r g b / 0.2);
			stroke: var(--text-primary);
			pointer-events: none;
		}
	}

	path {
		transition:
			stroke 0.2s ease,
			fill 0.2s ease;

		&.line {
			fill: none;

			stroke: rgb(from var(--series-color) r g b / 0.85);
			stroke-width: 2px;
			&.muted {
				stroke: rgb(from var(--series-color) r g b / 0.45);
				stroke-width: 1px;
			}
			.highlighted {
				stroke: var(--series-color);
			}
			&.area-mode {
				stroke-width: 0.4px;
				stroke: var(--text-secondary);
				&.muted {
					stroke: var(--text-tertiary);
				}
			}
		}

		&.outline {
			fill: none;
			stroke: var(--series-color);
			filter: blur(2px);

			stroke-opacity: 0.4;
			[data-is-zack="true"] & {
				stroke-opacity: 0.3;
			}

			stroke-width: 6px;
			&:not(.highlighted) {
				stroke-width: 0;
			}
		}

		&.area {
			fill: rgb(from var(--series-color) r g b / 0.85);
			fill-opacity: 0.45;
			&.muted {
				fill: rgb(from var(--series-color) r g b / 0.45);
				fill-opacity: 0.25;
			}
			&.highlighted {
				fill: var(--series-color);
				fill-opacity: 0.65;
			}

			[data-is-zack="false"] & {
				&:not(.highlighted) {
					fill: hsl(from var(--series-color) h calc(s + 5) calc(l + 10) / 0.85);
				}
				fill-opacity: 0.4;
				&.muted {
					fill: hsl(from var(--series-color) h calc(s + 5) calc(l + 10) / 0.45);
					fill-opacity: 0.2;
				}
				&.highlighted {
					fill-opacity: 0.65;
				}
			}
		}
	}

	text.label {
		fill: var(--text-primary);
		[data-is-zack="true"] & {
			fill: black;
		}
		text-anchor: middle;
		dominant-baseline: central;
	}

	circle {
		&.point {
			fill: rgb(from var(--series-color) r g b / 0.85);
			r: 3.5px;
			&.highlighted {
				fill: var(--series-color);
				r: 4px;
			}
			&.muted {
				fill: rgb(from var(--series-color) r g b / 0.45);
			}
		}

		&.outline {
			r: 6px;
			fill: var(--series-color);
			filter: blur(3px);

			opacity: 0.55;
			[data-is-zack="true"] & {
				opacity: 0.35;
			}

			&:not(.highlighted) {
				display: none;
			}
		}

		&.hovered {
			&.outer {
				r: 8px;
				fill: var(--series-color);
			}
			&.inner {
				r: 4px;
				fill: var(--bg-primary);
			}
			&.area-mode {
				/* cannot use `display: none`, tooltip needs to know its position */
				visibility: hidden;
			}
		}
	}
}

.legend {
	margin: 0;
	display: flex;

	&.vertical {
		flex-direction: column;
		overflow-y: auto;
	}
	&.horizontal {
		flex-direction: row;
		overflow-x: auto;
	}
}

